package org.example.Tomorroio.controller;

public interface WeatherController {
    void updateCharts();
}

