@startuml

title __CONTROLLER's Class Diagram__\n

  namespace org.example.Tomorroio {
    namespace controller {
      class org.example.Tomorroio.controller.WeatherChartController {
          + WeatherChartController()
          + updateCharts()
      }
    }
  }
  namespace org.example.Tomorroio {
    namespace model {
      class org.example.Tomorroio.model.WeatherData {
            - apiKey : String
            - latitude : double
            - longitude : double
            + fetchDataSeries()
            + fetchDataSeries()
            + setLocation()
            - setCoordinates()
      }
    }

    namespace view {
        interface org.example.Tomorroio.view.WeatherView {
              {abstract} + updateChart()
        }
    }

    namespace controller {
        interface org.example.Tomorroio.controller.WeatherController {
            {abstract} + updateCharts()
            }
        }
  }





  org.example.Tomorroio.controller.WeatherChartController .up.|> org.example.Tomorroio.controller.WeatherController
  org.example.Tomorroio.controller.WeatherChartController o-- org.example.Tomorroio.view.WeatherView : chartView
  org.example.Tomorroio.controller.WeatherChartController o-- org.example.Tomorroio.model.WeatherData : weatherData

@enduml
